--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -10,7 +9,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
     
-    <!-- Babel para transpilação em tempo real -->
+    <!-- Babel Standalone - Carregado de forma síncrona -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
     <style>
@@ -65,21 +64,23 @@
     </style>
 
     <script>
-        // Configuração de ambiente necessária antes de qualquer import
-        window.process = {
-            env: {
-                API_KEY: "process.env.API_KEY"
-            }
-        };
+        // Configuração de ambiente imediata
+        window.process = { env: { API_KEY: "process.env.API_KEY" } };
 
-        // Captura de erro para facilitar o diagnóstico
-        window.onerror = function(message, source, lineno, colno, error) {
-            console.error('Global Error:', message, 'at', source, lineno, colno);
-            const root = document.getElementById('root');
-            if (root && root.innerText.includes('Iniciando')) {
-                root.innerHTML = '<div style="color: #666; text-align: center; padding: 20px; font-size: 10px; font-family: sans-serif;">ERRO DE CARREGAMENTO NO SISTEMA.</div>';
+        // Registro do Preset antes do processamento do script principal
+        function setupBabel() {
+            if (window.Babel) {
+                Babel.registerPreset('gold-boss-preset', {
+                    presets: [
+                        [Babel.availablePresets['typescript'], { allExtensions: true, isTSX: true }],
+                        [Babel.availablePresets['react']]
+                    ]
+                });
+            } else {
+                setTimeout(setupBabel, 10);
             }
-        };
+        }
+        setupBabel();
     </script>
 
     <script type="importmap">
@@ -94,44 +95,21 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
 </head>
 <body>
     <div id="root">
-        <div style="color: #d4af37; display: flex; align-items: center; justify-content: center; height: 100vh; font-family: 'Cinzel', serif; text-transform: uppercase; letter-spacing: 0.3em; font-size: 12px; background: #000;">
+        <div style="color: #d4af37; display: flex; align-items: center; justify-content: center; height: 100vh; font-family: 'Cinzel', serif; text-transform: uppercase; letter-spacing: 0.3em; font-size: 12px; background: #000; text-align: center; padding: 20px;">
             Iniciando Protocolo Gold Boss...
         </div>
     </div>
 
-    <!-- Registro síncrono do preset do Babel -->
-    <script>
-      (function() {
-        const checkBabel = setInterval(() => {
-          if (window.Babel) {
-            clearInterval(checkBabel);
-            try {
-              Babel.registerPreset('gold-boss-preset', {
-                presets: [
-                  [Babel.availablePresets['typescript'], { allExtensions: true, isTSX: true }],
-                  [Babel.availablePresets['react']]
-                ]
-              });
-              
-              // Uma vez registrado, injetamos o script principal
-              const script = document.createElement('script');
-              script.type = 'text/babel';
-              script.setAttribute('data-type', 'module');
-              script.setAttribute('data-presets', 'gold-boss-preset');
-              script.src = './index.tsx';
-              script.crossOrigin = 'anonymous';
-              document.body.appendChild(script);
-            } catch (e) {
-              console.error('Falha ao registrar preset do Babel:', e);
-            }
-          }
-        }, 10);
-      })();
+    <!-- Script principal com crossorigin para permitir acesso a módulos -->
+    <script 
+        type="text/babel" 
+        data-type="module" 
+        data-presets="gold-boss-preset" 
+        src="./index.tsx" 
+        crossorigin="anonymous">
     </script>
-<script type="module" src="/index.tsx"></script>
 </body>
 </html>
