--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
     
-    <!-- Babel Standalone - Carregado de forma síncrona -->
+    <!-- Babel Standalone - Carregamento Síncrono -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
     <style>
@@ -67,28 +67,29 @@
         // Configuração de ambiente imediata
         window.process = { env: { API_KEY: "process.env.API_KEY" } };
 
-        // Registro do Preset antes do processamento do script principal
-        function setupBabel() {
-            if (window.Babel) {
-                Babel.registerPreset('gold-boss-preset', {
-                    presets: [
-                        [Babel.availablePresets['typescript'], { allExtensions: true, isTSX: true }],
-                        [Babel.availablePresets['react']]
-                    ]
-                });
-            } else {
-                setTimeout(setupBabel, 10);
-            }
+        // Registro do Preset síncrono para evitar race condition
+        if (window.Babel) {
+            Babel.registerPreset('gold-boss-preset', {
+                presets: [
+                    [Babel.availablePresets['typescript'], { allExtensions: true, isTSX: true }],
+                    [Babel.availablePresets['react']]
+                ]
+            });
         }
-        setupBabel();
+
+        // Diagnóstico de erro global
+        window.onerror = function(msg, url, lineNo, columnNo, error) {
+            console.error('Erro detectado no Protocolo Gold Boss:', msg, url, lineNo);
+            return false;
+        };
     </script>
 
     <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@19.0.0",
-    "react-dom": "https://esm.sh/react-dom@19.0.0",
-    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "react": "https://esm.sh/react@19",
+    "react-dom": "https://esm.sh/react-dom@19",
+    "react-dom/client": "https://esm.sh/react-dom@19/client",
     "@google/genai": "https://esm.sh/@google/genai@1.3.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
     "react/": "https://esm.sh/react@^19.2.4/"
@@ -103,7 +104,7 @@
         </div>
     </div>
 
-    <!-- Script principal com crossorigin para permitir acesso a módulos -->
+    <!-- Script principal com data-type module para suporte a imports -->
     <script 
         type="text/babel" 
         data-type="module" 
